--- a/Homeworks/Homework3/GalaxyMass.ipynb
+++ b/Homeworks/Homework3/GalaxyMass.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 147,
    "id": "1a5ef508-cbc2-47f3-944a-a0879ea01bd5",
    "metadata": {},
    "outputs": [],
@@ -16,8 +16,8 @@
     "    \"\"\"\n",
     "    ComponentMass is a function that returns the total mass of a user-specified galaxy component (disk, bulge, etc.)\n",
     "    \n",
-    "    Inputs: filename is the name of the file we want to read data from\n",
-    "            part_type is the type of galaxy component we want to return the mass of\n",
+    "    Inputs: filename (string) is the name of the file we want to read data from\n",
+    "            part_type (integer) is the type of galaxy component we want to return the mass of\n",
     "            \n",
     "    Outputs: M (astropy units Msun^12) the mass of the galaxy component\n",
     "    \"\"\"\n",
@@ -29,8 +29,6 @@
     "    m = data['m'][index]*u.M_sun*10**(10) #getting the mass of each particle in the specified type, setting its units (10**10 Msun) \n",
     "    #and storing as an array. \n",
     "\n",
-    "    m = m*0.01 #multiplying by 0.01 to get the correct units\n",
-    "\n",
     "    mtot = np.sum(m) #summing over all the masses in the mass array to get the total mass (mtot)\n",
     "\n",
     "    mtot_round = np.round(mtot,3) #rounding the total mass to 3 decimal places\n",
@@ -40,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 150,
    "id": "dde1948c-d38b-4283-9862-6c328cc093f3",
    "metadata": {},
    "outputs": [],
@@ -71,7 +69,7 @@
     "#f_bar = (bulge + disk)/total mass. \n",
     "MWf_bar = (MW_bulge + MW_disk)/MWtot\n",
     "M31f_bar = (M31_bulge + M31_disk)/M31tot\n",
-    "M33f_bar = M33_disk/M33tot #M33 does not have a bulge, so only the disk makes up the stellar mass portion. \n",
+    "M33f_bar = M33_disk/M33tot #M33 does not have a bulge, so only the disk makes up the stellar mass\n",
     "Localf_bar = (MW_bulge + MW_disk + M31_bulge + M31_disk + M33_disk)/MLocal\n",
     "\n",
     "#rounding f_bar values to 3 significant figures\n",
@@ -83,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 151,
    "id": "4fbda84d-0f41-4c32-ae5c-5bda3fbf1f3a",
    "metadata": {},
    "outputs": [
@@ -92,16 +90,16 @@
      "output_type": "stream",
      "text": [
       "   GALAXY NAME         HALO MASS         DISK MASS        BULGE MASS  \\\n",
-      "0           MW  1.97e+10 solMass  7.50e+08 solMass  1.00e+08 solMass   \n",
-      "1          M31  1.92e+10 solMass  1.20e+09 solMass  1.90e+08 solMass   \n",
-      "2          M33  1.87e+09 solMass  9.30e+07 solMass                 -   \n",
+      "0           MW  1.97e+12 solMass  7.50e+10 solMass  1.00e+10 solMass   \n",
+      "1          M31  1.92e+12 solMass  1.20e+11 solMass  1.90e+10 solMass   \n",
+      "2          M33  1.87e+11 solMass  9.30e+09 solMass                 -   \n",
       "3  Local Group                 -                 -                 -   \n",
       "\n",
       "         TOTAL MASS     F_BAR  \n",
-      "0  2.06e+10 solMass  4.10e-02  \n",
-      "1  2.06e+10 solMass  6.80e-02  \n",
-      "2  1.96e+09 solMass  4.70e-02  \n",
-      "3  4.32e+10 solMass  5.40e-02  \n"
+      "0  2.06e+12 solMass  4.10e-02  \n",
+      "1  2.06e+12 solMass  6.80e-02  \n",
+      "2  1.96e+11 solMass  4.70e-02  \n",
+      "3  4.32e+12 solMass  5.40e-02  \n"
      ]
     }
    ],
@@ -117,7 +115,7 @@
     "        \"F_BAR\":[\"{:.2e}\".format(MWf_bar), \"{:.2e}\".format(M31f_bar), \"{:.2e}\".format(M33f_bar),\"{:.2e}\".format(Localf_bar)]}\n",
     "        #data is a dictionary, the column name is the key. \n",
     "\n",
-    "mass_table = pd.DataFrame(data) #setting the data in the table using DataFrame()\n",
+    "mass_table = pd.DataFrame(data) #setting the data in the table using \n",
     "print(mass_table) #testing "
    ]
   },
