altered COM to read from arrays instead of a file

--- a/Research Assignments/ResearchAssignment5/ResearchAssignment.ipynb
+++ b/Research Assignments/ResearchAssignment5/ResearchAssignment.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c3b9398b-17fd-4f61-ae31-7ad17bae12b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\nRESEARCH TOPIC: My Project is designed to determine the shape of the MW-M31 merger halo remnant. \\nI expect the remnant to be oblate (x = y > z). In order to do this, I need to compare all 3 axial\\nlengths of the halo remnant. \\n\\nI need to create 2 plots of the halo: x vs. y and x vs. z, and use the package photutils \\nto overplot isodensity contours onto each to get the axial lengths in x, y, and z. The package \\nwill tell me the axial lengths of each contour. These will be the values used for comparison. \\nI need to make the graphs into images to use photutils. \\n\\nPLANNED STEPS:\\n\\n1. import parackges (numpy, photutils, matplotlib,etc..) and CenterOfMass2\\n2. use an index to sort particles by type. I only need the halo particles for this \\nproject (type 1). \\n3. combine the halo particle only position arrays so I can plot the combined \\nMW-M31 halo. (use np.concatenate()?)\\n4. find center of mass using modified CenterOfMass2. This will determine the\\nr needed for Hernquist profile \\n5. determine new combined halo mass from GalaxyMass code.\\n6. fit the Hernquist profile. This will determine the scale length (h_a). \\n7. plot x vs. y \\n8. plot x vs. z\\n9. convert plots to histograms/images. Photutils will only overplot on images.\\n10. use Photutils to overplot the isodensity contours to get the axial lengths \\nin x and y from first graph, and z froms second. Use h_a to plot the countours for accuracy. \\n11. compare. if x = y > z, then remnant is, indeed, oblate. if x = y < z, it is prolate. \\n\\n(OPTIONAL)\\n12. If i have time, I might overplot some contours using 1/2*h_a, or 2*r_a to compare. \\n\\n\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "\n",
@@ -45,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "53027230-6652-45e2-9e3e-fe2e7ce29083",
    "metadata": {},
    "outputs": [],
@@ -61,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "8c012322-b07c-4f53-855a-250ed5cade2e",
    "metadata": {},
    "outputs": [],
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "77c5e592-d0ba-483f-ab7f-9701be60725d",
    "metadata": {},
    "outputs": [],
@@ -144,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "id": "7b0da874-d997-4bfc-8826-158910240ba2",
    "metadata": {},
    "outputs": [
@@ -152,6 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0.00768352 0.00768352 0.00768352 ... 0.0078997  0.0078997  0.0078997 ]\n",
       "389.5806499999998\n"
      ]
     }
@@ -163,28 +175,60 @@
     "halo_mass will be used later to make the Hernquist Mass Profile. \n",
     "'''\n",
     "x,y,z,m = halodata(\"LOWRESM31_630.txt\", \"LOWRESMW_630.txt\" )\n",
+    "print(m) #test\n",
     "halo_mass = np.sum(m) #mass will be in 10**10 M_Sun. May need to change later\n",
     "print(halo_mass) #test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f1658511-ee7b-4c7e-9c41-5208850f2145",
+   "execution_count": 19,
+   "id": "0b504388-2968-4ec0-8d06-478c5e1a1ae7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "123.61629257605391"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "'''\n",
-    "Need to find COM of merged galaxies to figure out r for the Hernquist mass code \n",
-    "I need to modify the code for CenterOfMass, but I haven't had much time to do that yet.\n",
-    "It needs to be adjusted to find the COM using the array I make instead of reading from a file.\n",
-    "Himansh is helping me figure this out. \n",
-    "'''"
+    "np.sum(x*m)/np.sum(m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
+   "id": "f1658511-ee7b-4c7e-9c41-5208850f2145",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[122.69  73.65  90.79] kpc\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Need to find COM of merged galaxies to figure out r for the Hernquist mass code \n",
+    "'''\n",
+    "\n",
+    "#make an instance of the COM class\n",
+    "COM = CenterOfMass()\n",
+    "dm_com = COM.COM_P(1,4,x,y,z,m)\n",
+    "print(dm_com)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "92750a53-3401-4f7e-9b00-eae142c08373",
    "metadata": {},
    "outputs": [],
