--- a/Labs/Lab13/Lab13_Template.ipynb
+++ b/Labs/Lab13/Lab13_Template.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,17 +501,13 @@
     "        \n",
     "        return SH\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -674,9 +670,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nthe number of photons populating the Planck distribution is so high (much higher than the number H atoms)\\nthat the universe is ionized. \\n'"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# So why doesn't recombination occur then? - see lecture \n",
     "\n",
@@ -696,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -756,14 +763,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/v1/c5bw5tvn0fx16gl6x3gs4n3m0000gn/T/ipykernel_4765/415385831.py:208: DeprecationWarning: 'scipy.integrate.simps' is deprecated in favour of 'scipy.integrate.simpson' and will be removed in SciPy 1.14.0\n",
+      "/var/folders/v1/c5bw5tvn0fx16gl6x3gs4n3m0000gn/T/ipykernel_4765/3012815248.py:208: DeprecationWarning: 'scipy.integrate.simps' is deprecated in favour of 'scipy.integrate.simpson' and will be removed in SciPy 1.14.0\n",
       "  DC = simps(y,zrange)*u.Mpc\n"
      ]
     },
@@ -784,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +805,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/v1/c5bw5tvn0fx16gl6x3gs4n3m0000gn/T/ipykernel_4765/415385831.py:208: DeprecationWarning: 'scipy.integrate.simps' is deprecated in favour of 'scipy.integrate.simpson' and will be removed in SciPy 1.14.0\n",
+      "/var/folders/v1/c5bw5tvn0fx16gl6x3gs4n3m0000gn/T/ipykernel_4765/3012815248.py:208: DeprecationWarning: 'scipy.integrate.simps' is deprecated in favour of 'scipy.integrate.simpson' and will be removed in SciPy 1.14.0\n",
       "  DC = simps(y,zrange)*u.Mpc\n"
      ]
     }
@@ -819,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +838,7 @@
        "<Quantity 13.96846031 Gyr>"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,41 +856,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/v1/c5bw5tvn0fx16gl6x3gs4n3m0000gn/T/ipykernel_4765/3012815248.py:208: DeprecationWarning: 'scipy.integrate.simps' is deprecated in favour of 'scipy.integrate.simpson' and will be removed in SciPy 1.14.0\n",
+      "  DC = simps(y,zrange)*u.Mpc\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.13760727421861146 Mpc\n"
+     ]
+    }
+   ],
    "source": [
     "# What is the sound horizon at the epoch of recombination\n",
-    "# in the BenchMark Cosmology?"
+    "# in the BenchMark Cosmology?\n",
+    "\n",
+    "SoundHorizon = Benchmark.SoundHorizon(z_recombine,20000)\n",
+    "print(SoundHorizon)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 183,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "151.5056089146912 Mpc\n"
+     ]
+    }
+   ],
    "source": [
-    "# What is the sound horizon TODAY in the BenchMark Cosmology?"
+    "# What is the sound horizon TODAY in the BenchMark Cosmology?\n",
+    "\n",
+    "#Proper Distance = Comoving Radial Distance/(1+z)\n",
+    "\n",
+    "SoundHorizonToday = SoundHorizon*(1+z_recombine)\n",
+    "print(SoundHorizonToday)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/v1/c5bw5tvn0fx16gl6x3gs4n3m0000gn/T/ipykernel_4765/3012815248.py:208: DeprecationWarning: 'scipy.integrate.simps' is deprecated in favour of 'scipy.integrate.simpson' and will be removed in SciPy 1.14.0\n",
+      "  DC = simps(y,zrange)*u.Mpc\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10695266343711388 Mpc\n"
+     ]
+    }
+   ],
    "source": [
     "# What is the sound horizon at the epoch of recombination \n",
-    "# in the Einstein DeSitter Cosmology?"
+    "# in the Einstein DeSitter Cosmology?\n",
+    "\n",
+    "SoundHorizonED = EDeSitter.SoundHorizon(z_recombine,20000)\n",
+    "print(SoundHorizonED)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "117.75488244426238 Mpc\n"
+     ]
+    }
+   ],
    "source": [
     "# What is the sound horizon TODAY \n",
-    "# in the Einstein DeSitter Cosmology?"
+    "# in the Einstein DeSitter Cosmology?\n",
+    "\n",
+    "SoundHorizonTodayED = SoundHorizonED*(1+z_recombine)\n",
+    "print(SoundHorizonTodayED)"
    ]
   },
   {
@@ -895,11 +964,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.247800083674524\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/v1/c5bw5tvn0fx16gl6x3gs4n3m0000gn/T/ipykernel_4765/3012815248.py:208: DeprecationWarning: 'scipy.integrate.simps' is deprecated in favour of 'scipy.integrate.simpson' and will be removed in SciPy 1.14.0\n",
+      "  DC = simps(y,zrange)*u.Mpc\n"
+     ]
+    }
+   ],
    "source": [
-    "# What is the angular size subtended by the Sound Horizon Diameter?"
+    "# What is the angular size subtended by the Sound Horizon Diameter?\n",
+    "\n",
+    "ThetaSound = 2*SoundHorizon/Benchmark.AngularDiameterDistance(z_recombine)\n",
+    "print(ThetaSound*u.radian.to(u.degree))"
    ]
   }
  ],
