ResearchAssignment6 PDF submission + code WIP

--- a/ResearchAssignments/ResearchAssignment6/ResearchAssignment.ipynb
+++ b/ResearchAssignments/ResearchAssignment6/ResearchAssignment.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "4e9077da-c383-4640-b595-5af72658f8f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (2669948128.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[108], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    '''\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "\n",
@@ -37,12 +46,13 @@
     "11. compare. if x = y > z, then remnant is, indeed, oblate. if x = y < z, it is prolate. \n",
     "\n",
     "(OPTIONAL)\n",
-    "12. If i have time, I might overplot some contours using 1/2*h_a, or 2*r_a to compare. \n"
+    "12. If i have time, I might overplot some contours using 1/2*h_a, or 2*r_a to compare. \n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 110,
    "id": "53027230-6652-45e2-9e3e-fe2e7ce29083",
    "metadata": {},
    "outputs": [],
@@ -66,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 112,
    "id": "77c5e592-d0ba-483f-ab7f-9701be60725d",
    "metadata": {},
    "outputs": [],
@@ -136,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 114,
    "id": "7b0da874-d997-4bfc-8826-158910240ba2",
    "metadata": {},
    "outputs": [
@@ -167,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 115,
    "id": "0b504388-2968-4ec0-8d06-478c5e1a1ae7",
    "metadata": {},
    "outputs": [],
@@ -177,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 116,
    "id": "f1658511-ee7b-4c7e-9c41-5208850f2145",
    "metadata": {},
    "outputs": [
@@ -216,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 117,
    "id": "92750a53-3401-4f7e-9b00-eae142c08373",
    "metadata": {},
    "outputs": [],
@@ -298,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 118,
    "id": "3e501fc2-1ba2-42bd-82c8-71e9f6c207ce",
    "metadata": {},
    "outputs": [
@@ -308,7 +318,7 @@
        "Text(0.5, 0, 'radius [kpc]')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -363,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 119,
    "id": "01f582bb-5a7c-4daa-97a5-016d02e42749",
    "metadata": {},
    "outputs": [
@@ -402,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 120,
    "id": "b9282b8a-19d5-45d0-937a-d04801618e80",
    "metadata": {},
    "outputs": [
@@ -465,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 121,
    "id": "5865dbd5-003b-4231-8c73-d98a7fffde77",
    "metadata": {},
    "outputs": [],
@@ -479,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 122,
    "id": "73856ae1-0fe0-4047-a5ee-59013b7ab4e1",
    "metadata": {},
    "outputs": [
@@ -532,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 123,
    "id": "77263c4b-ce2c-4047-af7a-3e196ac63295",
    "metadata": {},
    "outputs": [
@@ -540,7 +550,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ellipticity of 96 kpc elliptical contour:  0.15490809866925553\n"
+      "Ellipticity of 96 kpc elliptical contour:  0.155\n"
      ]
     }
    ],
@@ -558,12 +568,12 @@
     "\n",
     "#reading the ellipticity\n",
     "e_XY = iso1_96.eps\n",
-    "print(\"Ellipticity of 96 kpc elliptical contour: \", e_XY)"
+    "print(\"Ellipticity of 96 kpc elliptical contour: \", np.round(e_XY,3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 124,
    "id": "4b285908-4033-4064-b564-d636df4bddcb",
    "metadata": {},
    "outputs": [
@@ -592,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 125,
    "id": "c81879a0-4082-4c86-a4c1-9dcfb649602c",
    "metadata": {},
    "outputs": [
@@ -651,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 126,
    "id": "89140c6a-aa0e-482a-b547-5825cd727180",
    "metadata": {},
    "outputs": [],
@@ -665,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 127,
    "id": "1a90e562-9f1f-4b85-b505-e3ad190b84e6",
    "metadata": {},
    "outputs": [
@@ -718,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 128,
    "id": "49c276bf-30ed-44d9-aa29-709a48e9203a",
    "metadata": {},
    "outputs": [
@@ -749,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 129,
    "id": "62c6f190-8a5b-4b82-971a-c7841e5f5634",
    "metadata": {},
    "outputs": [
